<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Openpay</string>
    <string name="card_created">Tarjeta registrada correctamente</string>
    <string name="button_save">Guardar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="holder_name">Titular</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="cvv">CVV2</string>
    <string name="info">Información</string>
    <string name="error">Error</string>
    <string name="card_added">Tarjeta registrada</string>
    <string name="invalid_card_number">Número inválido</string>
    <string name="invalid_holder_name">Titular es requerido</string>
    <string name="invalid_cvv">Código de seguridad inválido</string>
    <string name="invalid_expire_date">Fecha de expiracion inválida</string>
    <string name="progress_message">Procesando...</string>
    <string name="declined">La tarjeta fue rechazada</string>
    <string name="expired">La tarjeta ha expirado</string>
    <string name="insufficient_funds">La tarjeta no tiene fondos suficientes</string>
    <string name="stolen_card">La tarjeta ha sido identificada como una tarjeta robada</string>
    <string name="suspected_fraud">La tarjeta ha sido identificada como una tarjeta fraudulenta.</string>
    <string name="communication_error">No se puede establecer comunicacion con el servidor</string>
     <string name="already_exists">La tarjeta ya se encuentra registrada</string>
     <string name="error_creating_card">Ocurrio un error al regitrar la tarjeta</string>
    
    
     <string-array name="year_array">
         <item>Año</item>
         <item>18</item>
         <item>19</item>
         <item>20</item>
         <item>21</item>
         <item>22</item>
         <item>23</item>
         <item>24</item>
         <item>25</item>
    </string-array>
    
     
     <string-array name="month_array">
        <item>Mes</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
        <string name="add_card">Guardar tarjeta</string>
        <string name="checkout">Generar</string>
        <string name="sessionId">Device session id: </string>
        <string name="getSessionId">Generar device session id</string>
        <string name="card">Tarjeta</string>
        <string name="token">Token</string>
</resources>
