<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_card"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/holder_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/holder_name" 
       
        />

    <EditText
        android:id="@+id/card_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number" 
        android:inputType="numberDecimal"
        android:maxLength="16"
        />

    <EditText
        android:id="@+id/cvv2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv" 
        android:inputType="numberDecimal"
        android:maxLength="4"
        />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/year_array" />

    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/month_array" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="saveCard"
        android:text="@string/button_save" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sessionId" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>